--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run build-dev; npm run build-prod",
-    "build-dev": "./node_modules/.bin/babel src/TBAEngine.js -o dist/TBAEngine.js --source-maps",
-    "build-prod": "./node_modules/.bin/babel src/TBAEngine.js -o dist/TBAEngine.min.js --minified",
-    "dev-watch": "./node_modules/.bin/babel src/TBAEngine.js -o dist/TBAEngine.js --source-maps -w"
+    "build-dev": "babel src/TBAEngine.js -o dist/TBAEngine.js --source-maps",
+    "build-prod": "babel src/TBAEngine.js -o dist/TBAEngine.min.js --minified",
+    "dev-watch": "babel src/TBAEngine.js -o dist/TBAEngine.js --source-maps -w"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/gelus/TBAEngine#readme",
   "devDependencies": {
     "babel-cli": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0"
+    "babel-preset-es2015": "^6.16.0",
+    "systemjs": "^0.19.40"
   }
 }
